--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>wasm-int</title>
-        <script type="module" src="./web.mjs"></script>
+        <script type="module" src="./js/web.mjs"></script>
     </head>
     <body></body>
 </html>
