--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>wasm-int</title>
+        <link rel="stylesheet" href="style.css">
         <script type="module" src="./js/web.mjs"></script>
     </head>
     <body></body>
